--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Orbitron:wght@400..900&family=Pacifico&family=Pixelify+Sans:wght@400..700&family=Quicksand&family=Rubik+Iso&family=Turret+Road:wght@200;300;400;500;700;800&display=swap');
 .App {
   text-align: center;
 }
